Separate file upload implementation to own branch

--- a/src/app/html/justus.html
+++ b/src/app/html/justus.html
@@ -6,8 +6,8 @@
         <div data-ng-if="vaihe==2" data-ng-include data-src="'html/justus/julkaisutyyppi.html'"></div>
         <div data-ng-if="vaihe==3" data-ng-include data-src="'html/justus/tietojensyotto.html'"></div>
         <!-- voi olla omassa ali-scopessa -->
-        <div data-ng-if="vaihe==4" data-ng-include data-src="'html/justus/tallennus.html'"></div>
+        <div data-ng-if="vaihe==4" data-ng-include data-src="'html/justus/julkaisunsyotto.html'"></div>
+        <div data-ng-if="vaihe==5" data-ng-include data-src="'html/justus/tallennus.html'"></div>
     </form>
 
 </div>
-
