--- a/src/app/html/tarkasta.html
+++ b/src/app/html/tarkasta.html
@@ -1,13 +1,13 @@
 <div class="row no-gutter m-b">
   <div class="col-xs-6 text-center">
     <div class="justus-btn justus-btn-stage" data-ng-class="{selected: odottavat}"
-    data-ng-click="odottavat=true; resetData()">
+         data-ng-click="odottavat=true; resetData()">
       <span data-ng-bind="i18n.content.tarkasta.odottavat[lang]"></span>
     </div>
   </div>
   <div class="col-xs-6 text-center">
     <div class="justus-btn justus-btn-stage" data-ng-class="{selected: !odottavat}"
-    data-ng-click="odottavat=false; resetData()">
+         data-ng-click="odottavat=false; resetData()">
       <span data-ng-bind="i18n.content.tarkasta.hyvaksytyt[lang]"></span>
     </div>
   </div>
@@ -21,15 +21,15 @@
   <div class="row">
     <div class="col-xs-12">
       <button type="button"
-        class="btn btn-default"
-        data-ng-if="user.role === 'admin' || user.role === 'owner'"
-        ng-csv="getCsvExportFile()"
-        lazy-load="true"
-        csv-header="csvExportHeader"
-        filename="julkaisut.csv"
-        field-separator=";"
-        quote-strings="true"
-        data-ng-disabled="loading.csv === true">
+              class="btn btn-default"
+              data-ng-if="user.role === 'admin' || user.role === 'owner'"
+              ng-csv="getCsvExportFile()"
+              lazy-load="true"
+              csv-header="csvExportHeader"
+              filename="julkaisut.csv"
+              field-separator=";"
+              quote-strings="true"
+              data-ng-disabled="loading.csv === true">
         <span data-ng-bind="i18n.content.tarkasta.csv[lang]"></span>
 
 
@@ -41,7 +41,7 @@
               class="btn btn-secondary pull-right"
               data-ng-if="!odottavat"
               data-ng-click="showRejectedPublications()">
-              <span data-ng-bind="showhide[lang]+' '+i18n.content.tarkasta.hylatyt.painike[lang]"></span>
+        <span data-ng-bind="showhide[lang]+' '+i18n.content.tarkasta.hylatyt.painike[lang]"></span>
       </button>
       <hr>
     </div>
@@ -51,105 +51,110 @@
     <div class="col-xs-12 table-responsive">
       <table class="table table-striped table-hover">
         <thead>
-          <tr>
-            <th data-ng-click="colOrderReverse=!(colOrder=='id'?colOrderReverse:true); colOrder='id'">
-              <span data-ng-bind="i18n.content.tarkasta.table.julkaisuid[lang]"></span>
-              <span class="fa fa-sort-desc" data-ng-if="colOrder=='id' && !(colOrderReverse)"></span>
-              <span class="fa fa-sort-asc" data-ng-if="colOrder=='id' && (colOrderReverse)"></span>
-            </th>
-            <th data-ng-click="colOrderReverse=!(colOrder=='julkaisunnimi'?colOrderReverse:true); colOrder='julkaisunnimi'">
-              <span data-ng-bind="i18n.content.tarkasta.table.julkaisunnimi[lang]"></span>
-              <span class="fa fa-sort-desc" data-ng-if="colOrder=='julkaisunnimi' && !(colOrderReverse)"></span>
-              <span class="fa fa-sort-asc" data-ng-if="colOrder=='julkaisunnimi' && (colOrderReverse)"></span>
-            </th>
-            <th data-ng-click="colOrderReverse=!(colOrder=='tekijat'?colOrderReverse:true); colOrder='tekijat'">
-              <span data-ng-bind="i18n.content.tarkasta.table.julkaisuntekijat[lang]"></span>
-              <span class="fa fa-sort-desc" data-ng-if="colOrder=='tekijat' && !(colOrderReverse)"></span>
-              <span class="fa fa-sort-asc" data-ng-if="colOrder=='tekijat' && (colOrderReverse)"></span>
-            </th>
-            <th class="hidden-xs"
-            data-ng-click="colOrderReverse=!(colOrder=='modified'?colOrderReverse:true); colOrder='modified'">
-              <span data-ng-bind="i18n.content.tarkasta.table.muokattu[lang]"></span>
-              <span class="fa fa-sort-desc" data-ng-if="colOrder=='modified' && !(colOrderReverse)"></span>
-              <span class="fa fa-sort-asc" data-ng-if="colOrder=='modified' && (colOrderReverse)"></span>
-            </th>
-            <th class="hidden-xs"
-            data-ng-click="colOrderReverse=!(colOrder=='username'?colOrderReverse:true); colOrder='username'">
-              <span data-ng-bind="i18n.content.tarkasta.table.viimeisinmuokkaaja[lang]"></span>
-              <span class="fa fa-sort-desc" data-ng-if="colOrder=='username' && !(colOrderReverse)"></span>
-              <span class="fa fa-sort-asc" data-ng-if="colOrder=='username' && (colOrderReverse)"></span>
-            </th>
-            <th data-ng-show="state.name=='hyvaksy'"
+        <tr>
+          <th data-ng-click="colOrderReverse=!(colOrder=='id'?colOrderReverse:true); colOrder='id'">
+            <span data-ng-bind="i18n.content.tarkasta.table.julkaisuid[lang]"></span>
+            <span class="fa fa-sort-desc" data-ng-if="colOrder=='id' && !(colOrderReverse)"></span>
+            <span class="fa fa-sort-asc" data-ng-if="colOrder=='id' && (colOrderReverse)"></span>
+          </th>
+          <th data-ng-click="colOrderReverse=!(colOrder=='julkaisunnimi'?colOrderReverse:true); colOrder='julkaisunnimi'">
+            <span data-ng-bind="i18n.content.tarkasta.table.julkaisunnimi[lang]"></span>
+            <span class="fa fa-sort-desc" data-ng-if="colOrder=='julkaisunnimi' && !(colOrderReverse)"></span>
+            <span class="fa fa-sort-asc" data-ng-if="colOrder=='julkaisunnimi' && (colOrderReverse)"></span>
+          </th>
+          <th data-ng-click="colOrderReverse=!(colOrder=='tekijat'?colOrderReverse:true); colOrder='tekijat'">
+            <span data-ng-bind="i18n.content.tarkasta.table.julkaisuntekijat[lang]"></span>
+            <span class="fa fa-sort-desc" data-ng-if="colOrder=='tekijat' && !(colOrderReverse)"></span>
+            <span class="fa fa-sort-asc" data-ng-if="colOrder=='tekijat' && (colOrderReverse)"></span>
+          </th>
+          <th class="hidden-xs"
+              data-ng-click="colOrderReverse=!(colOrder=='modified'?colOrderReverse:true); colOrder='modified'">
+            <span data-ng-bind="i18n.content.tarkasta.table.muokattu[lang]"></span>
+            <span class="fa fa-sort-desc" data-ng-if="colOrder=='modified' && !(colOrderReverse)"></span>
+            <span class="fa fa-sort-asc" data-ng-if="colOrder=='modified' && (colOrderReverse)"></span>
+          </th>
+          <th class="hidden-xs"
+              data-ng-click="colOrderReverse=!(colOrder=='username'?colOrderReverse:true); colOrder='username'">
+            <span data-ng-bind="i18n.content.tarkasta.table.viimeisinmuokkaaja[lang]"></span>
+            <span class="fa fa-sort-desc" data-ng-if="colOrder=='username' && !(colOrderReverse)"></span>
+            <span class="fa fa-sort-asc" data-ng-if="colOrder=='username' && (colOrderReverse)"></span>
+          </th>
+          <th>
+            Julkaisu
+          </th>
+          <th data-ng-show="state.name=='hyvaksy'"
               data-ng-click="colOrderReverse=!(colOrder=='julkaisuntila'?colOrderReverse:false); colOrder='julkaisuntila'"
               class="condensed">
-              <span data-ng-bind="i18n.content.tarkasta.table.hyvaksy[lang]"></span>
-              <span class="fa" data-ng-class="{'fa-sort-desc': colOrder=='julkaisuntila' && !(colOrderReverse), 'fa-sort-asc': colOrder=='julkaisuntila' && (colOrderReverse)}"></span>
-            </th>
-          </tr>
+            <span data-ng-bind="i18n.content.tarkasta.table.hyvaksy[lang]"></span>
+            <span class="fa" data-ng-class="{'fa-sort-desc': colOrder=='julkaisuntila' && !(colOrderReverse), 'fa-sort-asc': colOrder=='julkaisuntila' && (colOrderReverse)}"></span>
+          </th>
+        </tr>
         </thead>
         <tbody>
-          <tr data-ng-repeat="d in data.julkaisu | orderBy:colOrder:colOrderReverse track by d.id"
-              data-ng-if="(odottavat && !d.julkaisuntila) || (!odottavat && d.julkaisuntila)"
-              data-ng-hide="d.julkaisuntila === '-1'"
-              data-ng-class="{'hover-table-green': !d.julkaisuntila || state.name=='hyvaksy'}">
-            <td class="condensed nowrap">
-              <a data-ng-show="state.name=='hyvaksy' || !d.julkaisuntila"
-                 data-ng-click="editPublication(d)"
-                data-ui-sref="justus({lang:lang,id:d.id,vaihe:4})">
-                <span data-ng-bind="d.julkaisuvuosi+'-'+d.organisaatiotunnus+'-'+d.id"></span>
-              </a>
-              <span data-ng-show="state.name=='omat' && d.julkaisuntila" data-ng-bind="d.julkaisuvuosi+'-'+d.organisaatiotunnus+'-'+d.id"></span>
-            </td>
-            <td data-ng-click="editPublication(d)">{{ d.julkaisunnimi | truncate:true:180:'...' }}</td>
-            <td data-ng-click="editPublication(d)">{{ d.tekijat | truncate:true:180:'...' }}</td>
-            <td data-ng-click="editPublication(d)" class="hidden-xs nowrap">
-              <span data-ng-bind="d.modified | date:'d.M.yyyy HH:mm'"></span>
-            </td>
-            <td data-ng-click="editPublication(d)" class="hidden-xs">
-              <span data-ng-bind="d.username"></span>
-            </td>
-            <td data-ng-show="state.name=='hyvaksy'" class="btn-col">
-              <div class="btn-group">
-                <button data-ng-repeat="julkaisuntila in codes.julkaisuntila | orderBy: 'arvo' | limitTo:4"
-                  title="{{julkaisuntila.selite}}"
-                  class="btn btn-primary"
-                  data-ng-class="{'active': d.ui_julkaisuntila==julkaisuntila.arvo}"
-                  data-ng-click="d.ui_julkaisuntila = julkaisuntila.arvo; updatePublication(d, julkaisuntila.arvo)">
-                  {{ julkaisuntila.arvo }}
-                </button>
-              </div>
-            </td>
-          </tr>
-          <tr data-ng-if="odottavat === false"
-              data-ng-show="showRejected && data.julkaisu.length > 0" class="bg-white">
-            <td colspan="6"><h4><span class="font-weight-bold" data-ng-bind="i18n.content.tarkasta.hylatyt.otsikko[lang]"></span></h4></td>
-          </tr>
-          <tr data-ng-repeat="d in data.julkaisu | orderBy:colOrder:colOrderReverse track by d.id"
-              data-ng-if="d.julkaisuntila === '-1' && odottavat === false"
-              data-ng-show="showRejected">
-            <td class="condensed nowrap">
-                <span data-ng-bind="d.julkaisuvuosi+'-'+d.organisaatiotunnus+'-'+d.id"></span>
-            </td>
-            <td>{{ d.julkaisunnimi | truncate:true:180:'...' }}</td>
-            <td>{{ d.tekijat | truncate:true:180:'...' }}</td>
-            <td>
-              <span data-ng-bind="d.modified | date:'d.M.yyyy HH:mm'"></span>
-            </td>
-            <td >
-              <span data-ng-bind="d.username"></span>
-            </td>
-            <td data-ng-show="state.name=='hyvaksy'" class="btn-col">
-              <div class="btn-group">
-                <button data-ng-repeat="julkaisuntila in codes.julkaisuntila | orderBy: 'arvo' | limitTo:4"
-                  title="{{ julkaisuntila.selite }}"
-                  class="btn btn-primary"
-                  data-ng-class="{'active': d.ui_julkaisuntila==julkaisuntila.arvo}"
-                  data-ng-click="d.ui_julkaisuntila = julkaisuntila.arvo; updatePublication(d, julkaisuntila.arvo)">
-                  {{ julkaisuntila.arvo }}
-                </button>
-              </div>
-            </td>
-          </tr>
+        <tr data-ng-repeat="d in data.julkaisu | orderBy:colOrder:colOrderReverse track by d.id"
+            data-ng-if="(odottavat && !d.julkaisuntila) || (!odottavat && d.julkaisuntila)"
+            data-ng-hide="d.julkaisuntila === '-1'"
+            data-ng-class="{'hover-table-green': !d.julkaisuntila || state.name=='hyvaksy'}">
+          <td class="condensed nowrap">
+            <a data-ng-show="state.name=='hyvaksy' || !d.julkaisuntila"
+               data-ng-click="editPublication(d)"
+               data-ui-sref="justus({lang:lang,id:d.id,vaihe:5})">
+              <span data-ng-bind="d.julkaisuvuosi+'-'+d.organisaatiotunnus+'-'+d.id"></span>
+            </a>
+            <span data-ng-show="state.name=='omat' && d.julkaisuntila" data-ng-bind="d.julkaisuvuosi+'-'+d.organisaatiotunnus+'-'+d.id"></span>
+          </td>
+          <td data-ng-click="editPublication(d)">{{ d.julkaisunnimi | truncate:true:180:'...' }}</td>
+          <td data-ng-click="editPublication(d)">{{ d.tekijat | truncate:true:180:'...' }}</td>
+          <td data-ng-click="editPublication(d)" class="hidden-xs nowrap">
+            <span data-ng-bind="d.modified | date:'d.M.yyyy HH:mm'"></span>
+          </td>
+          <td data-ng-click="editPublication(d)" class="hidden-xs">
+            <span data-ng-bind="d.username"></span>
+          </td>
+          <td><i class="fa fa-save"></i></td>
+          <td data-ng-show="state.name=='hyvaksy'" class="btn-col">
+            <div class="btn-group">
+              <button data-ng-repeat="julkaisuntila in codes.julkaisuntila | orderBy: 'arvo' | limitTo:4"
+                      title="{{julkaisuntila.selite}}"
+                      class="btn btn-primary"
+                      data-ng-class="{'active': d.ui_julkaisuntila==julkaisuntila.arvo}"
+                      data-ng-click="d.ui_julkaisuntila = julkaisuntila.arvo; updatePublication(d, julkaisuntila.arvo)">
+                {{ julkaisuntila.arvo }}
+              </button>
+            </div>
+          </td>
+        </tr>
+        <tr data-ng-if="odottavat === false"
+            data-ng-show="showRejected && data.julkaisu.length > 0" class="bg-white">
+          <td colspan="6"><h4><span class="font-weight-bold" data-ng-bind="i18n.content.tarkasta.hylatyt.otsikko[lang]"></span></h4></td>
+        </tr>
+        <tr data-ng-repeat="d in data.julkaisu | orderBy:colOrder:colOrderReverse track by d.id"
+            data-ng-if="d.julkaisuntila === '-1' && odottavat === false"
+            data-ng-show="showRejected">
+          <td class="condensed nowrap">
+            <span data-ng-bind="d.julkaisuvuosi+'-'+d.organisaatiotunnus+'-'+d.id"></span>
+          </td>
+          <td>{{ d.julkaisunnimi | truncate:true:180:'...' }}</td>
+          <td>{{ d.tekijat | truncate:true:180:'...' }}</td>
+          <td>
+            <span data-ng-bind="d.modified | date:'d.M.yyyy HH:mm'"></span>
+          </td>
+          <td >
+            <span data-ng-bind="d.username"></span>
+          </td>
+          <!--<td>julkaisulinkki</td>-->
+          <td data-ng-show="state.name=='hyvaksy'" class="btn-col">
+            <div class="btn-group">
+              <button data-ng-repeat="julkaisuntila in codes.julkaisuntila | orderBy: 'arvo' | limitTo:4"
+                      title="{{ julkaisuntila.selite }}"
+                      class="btn btn-primary"
+                      data-ng-class="{'active': d.ui_julkaisuntila==julkaisuntila.arvo}"
+                      data-ng-click="d.ui_julkaisuntila = julkaisuntila.arvo; updatePublication(d, julkaisuntila.arvo)">
+                {{ julkaisuntila.arvo }}
+              </button>
+            </div>
+          </td>
+        </tr>
         </tbody>
       </table>
     </div>
@@ -157,15 +162,15 @@
 
   <div class="text-center">
     <ul uib-pagination
-      data-ng-if="totalItems > query.pageSize"
-      data-ng-change="loadPublications()"
-      data-total-items="totalItems"
-      data-ng-model="query.currentPageNumber"
-      max-size="3"
-      class="pagination"
-      items-per-page="query.pageSize"
-      boundary-links="true"
-      force-ellipses="true">
+        data-ng-if="totalItems > query.pageSize"
+        data-ng-change="loadPublications()"
+        data-total-items="totalItems"
+        data-ng-model="query.currentPageNumber"
+        max-size="3"
+        class="pagination"
+        items-per-page="query.pageSize"
+        boundary-links="true"
+        force-ellipses="true">
     </ul>
   </div>
 
@@ -174,8 +179,8 @@
 <div class="row">
   <div class="col-xs-12">
     <button class="btn btn-lg btn-block btn-primary"
-      data-ui-sref="justus({lang:lang,vaihe:1})"
-      data-ng-bind="i18n.content.tarkasta.uusi[lang]">
+            data-ui-sref="justus({lang:lang,vaihe:1})"
+            data-ng-bind="i18n.content.tarkasta.uusi[lang]">
     </button>
   </div>
 </div>
