Some minor style changes to enter publication stage

--- a/src/app/scss/_helpers.scss
+++ b/src/app/scss/_helpers.scss
@@ -10,6 +10,10 @@
   margin-bottom: $padding-large-vertical;
 }
 
+.px {
+  padding: 0 $padding-large-horizontal
+};
+
 .nowrap {
   white-space: nowrap;
 }
