--- a/src/app/scss/components/_file-upload.scss
+++ b/src/app/scss/components/_file-upload.scss
@@ -15,9 +15,9 @@
 
 .drop-box {
   background: #F8F8F8;
-  border: 2px dashed #218b9a;
+  border: 1px dashed #218b9a;
   height: 150px;
-  margin: 10px;
+  margin: 10px 0;
   text-transform: uppercase;
   display: flex;
   justify-content: center;
