Add Bootstrap glyphicons

--- a/src/app/scss/main.scss
+++ b/src/app/scss/main.scss
@@ -27,6 +27,7 @@
 @import "../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/pagination";
 @import "../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/labels";
 @import "../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/alerts";
+@import "../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/glyphicons";
 
 // Components w/ JavaScript
 @import "../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/tooltip";
