Change publication placement in preview

--- a/src/app/html/justus/tallennus.html
+++ b/src/app/html/justus/tallennus.html
@@ -28,11 +28,6 @@
       <td>{{ justus.julkaisu.julkaisunnimi }}</td>
     </tr>
 
-    <!-- Julkaisu -->
-    <tr>
-      <td class="condensed"> Julkaisu </td>
-      <td>{{ justus.file.name }}</td>
-    </tr>
 
     <!-- Tekijät -->
     <tr>
@@ -274,6 +269,13 @@
       <td class="condensed">{{ i18n.content.form.rinnakkaistallennetunversionverkkoosoite[lang] }}</td>
       <td>{{ justus.julkaisu.rinnakkaistallennetunversionverkkoosoite }}</td>
     </tr>
+
+    <!-- Julkaisu -->
+    <tr>
+      <td class="condensed"> Julkaisu </td>
+      <td>{{ file.name }}</td>
+    </tr>
+
 
     <!-- Lisätieto kenttä -->
     <tr>
